Update base64 encoding to Java 8.